    - When a router wasn't listed in a new networkstatus, we were leaving
      the flags for that router alone -- meaning it remained Named,
      Running, etc -- even though absence from the networkstatus means
      that it shouldn't be considered to exist at all anymore. Now we
      clear all the flags for routers that fall out of the networkstatus
      consensus. Fixes bug 529.

  o Minor features (router descriptor cache):
    - If we find a cached-routers file that's been sitting around for more
      than 28 days unmodified, then most likely it's a leftover from when we
      upgraded to 0.2.0.8-alpha.  Remove it.  It has no good routers anyway.
    - When we (as a cache) download a descriptor because it was listed in a
      consensus, remember when the consensus was supposed to expire, and
      don't expire the descriptor until then.

  o Minor features (performance):
    - Call routerlist_remove_old_routers() much less often.  This should
      speed startup, especially on directory caches.
    - Don't try to launch descriptor downloads quite so often when we
      have enough directory information.

  o Minor bugfixes (directory authorities):
    - Correct the implementation of "download votes by digest."  Bugfix on
      0.2.0.8-alpha.
    - Make the "next period" votes into "current period" votes immediately
      after publishing the consensus; avoid a heisenbug that made them stick
      around indefinitely.
    - When we discard a vote as a duplicate, do not report this as an error.
    - Correctly check for bad options to the "PublishServerDescriptor"
      config option. Bugfix on 0.2.0.1-alpha; reported by Matt Edman.
    - When we discard a vote as a duplicate, do not report this as an error.
    - When we're configured to be a v3 authority, but we're only listed
      as a non-v3 authority in our DirServer line for ourself, correct the
      listing.
    - Treat missing v3 keys or certificates as an error when running as a