@@ -17,6 +17,11 @@ Changes in version 0.2.0.9-alpha - 2007-10-??
       clear all the flags for routers that fall out of the networkstatus
       consensus. Fixes bug 529.
 
+  o Minor features (v3 directory protocol):
+    - Allow tor-gencert to generate a new certificate without replacing the
+      signing key.
+    - Allow certificates to include an address.
+
   o Minor features (router descriptor cache):
     - If we find a cached-routers file that's been sitting around for more
       than 28 days unmodified, then most likely it's a leftover from when we
